# entangled-rs

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  action.yml
.github/workflows/: build-publish.yml  ci.yml  pypi.yml  release.yml
benchmarks/: compare_implementations.py
docs/: architecture.md  benchmarks.md  cli-comparison.md
entangled/: Cargo.toml  test.md
entangled-cli/: Cargo.toml
entangled-cli/src/: main.rs
entangled-cli/src/commands/: config.rs  helpers.rs  init.rs  locate.rs  mod.rs  reset.rs  status.rs  stitch.rs  sync.rs  tangle.rs  watch.rs
entangled/benches/: benchmark.rs
entangled/src/: errors.rs  lib.rs  style.rs  test_utils.rs
entangled/src/config/: annotation_method.rs  config_data.rs  config_update.rs  language.rs  markers.rs  mod.rs  templates.rs
entangled/src/hooks/: mod.rs  shebang.rs  spdx_license.rs
entangled/src/interface/: context.rs  document.rs  mod.rs
entangled/src/io/: file_cache.rs  filedb.rs  mod.rs  stat.rs  transaction.rs
entangled/src/model/: code_block.rs  mod.rs  properties.rs  reference_map.rs  reference_name.rs  tangle.rs
entangled/src/model/properties/: knitr.rs  mod.rs  quarto.rs
entangled/src/readers/: code.rs  delimiters.rs  markdown.rs  mod.rs  types.rs
examples/hello-world/: hello.md
examples/literate-crypto/: Makefile  entangled.toml
examples/literate-crypto/docs/: ciphers.md
examples/multi-file/: README.md
examples/pandoc-style/: document.md  entangled.toml
examples/quarto-analysis/: Makefile  entangled.toml  report.qmd
pyentangled/: Cargo.toml  README.md  pyproject.toml
pyentangled/src/: lib.rs
pyentangled/src/pyentangled/: __init__.py  _core.pyi  cli.py
pyentangled/tests/: test_pyentangled.py
src/: lib.rs  main.rs  text_location.rs
src/commands/: reset.rs  status.rs  stitch.rs  sync.rs  tangle.rs  watch.rs
src/config/: annotation_method.rs  config_data.rs  language.rs  mod.rs  namespace_default.rs  templates.rs
src/hooks/: mod.rs
src/interface/: context.rs  document.rs  mod.rs
src/io/: filedb.rs
src/model/: content.rs  mod.rs  properties.rs  reference_id.rs  reference_map.rs  reference_name.rs
src/readers/: code.rs  markdown.rs  types.rs  yaml_header.rs
