[package]
name = "entangled-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Entangled literate programming engine"
license = "MIT"
authors = ["Entangled Contributors"]

[dependencies]
entangled = { path = "../entangled" }
clap = { version = "4", features = ["derive"] }
notify = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "entangled"
path = "src/main.rs"
