[package]
name = "entangled"
version = "0.1.0"
edition = "2021"
description = "Literate programming engine - Rust translation"
license = "MIT"
authors = ["Entangled Contributors"]

[dependencies]
nom = "8"
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
glob = "0.3"
notify = "7"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
