[package]
name = "pyentangled"
version = "0.1.0"
edition = "2024"
description = "Python bindings for Entangled literate programming engine"
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
entangled = { path = "../entangled" }
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py39"] }
