[project]
name = "pyentangled"
version = "0.1.0"
description = "Python bindings for Entangled literate programming engine"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Shakeeb Alireza", email = "shakeeb.alireza@rezayat.net" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
keywords = ["literate-programming", "markdown", "documentation", "tangle", "stitch"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pyentangled = "pyentangled:main"

[project.urls]
Homepage = "https://github.com/entangled/entangled-rs"
Repository = "https://github.com/entangled/entangled-rs"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyentangled._core"
python-packages = ["pyentangled"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
